# wow-llm

./: .gitignore  Gemfile  README.md
crystal/v4/spec/: llm_spec.cr
crystal/v4/src/: llm.cr
crystal/v5/spec/: llm_spec.cr
crystal/v5/src/: cli.cr  llm.cr  train.cr
crystal/v7/: README.md  shard.yml
ruby/: .rubocop.yml  Gemfile
ruby/nnlm-linear/: llm.rb
ruby/nnlm-v0/: README.md  llm.rb  test.rb  test_simple.rb
ruby/nnlm-v1/: GRAPH.md  README.md  TANH.md  llm.rb  present.rb  test.rb  tokenizer.rb  train.rb
ruby/nnlm-v2/: cli.rb  llm.rb  test.rb  train.rb
ruby/nnlm-v3/: llm.rb
ruby/nnlm-with-attention/: llm.rb  test.rb
ruby/nnlm-with-transformer/: llm.rb
ruby/v1-simple-ngrams/: example.rb  llm.rb
ruby/v2-simple-ngrams/: example.rb  infer.rb  llm.rb  train.rb
ruby/v3-ngrams-optimized/: README.md  infer.rb  llm.rb  test.rb
ruby/v4-ngrams-with-backoff/: cli.rb  infer.rb  llm.rb  test.rb  train.rb
ruby/v5-ngrams-with-interpolation/: cli.rb  infer.rb  llm.rb  test.rb  train.rb
ruby/v6-tokens/: cli.rb  infer.rb  llm.rb  test.rb  train.rb
ruby/v7-bpe-tokens/: cli.rb  infer.rb  llm.rb  test.rb  tokenizer.rb  train.rb
ruby/v8-bpe-with-cache/: llm.rb
rust/tokeniza/: Cargo.toml
rust/tokeniza/src/: lib.rs  main.rs
v1-simple-ngrams/: README.md
v2-simple-ngrams/: example.rb  llm.rb  train.rb
v3-ngrams-optimized/: README.md  llm.rb  test.rb  train.rb
v4-ngrams-with-backoff/: cli.rb  llm.rb  test.rb  train.rb
v5-ngrams-with-interpolation/: cli.rb  llm.rb
v6-tokens/: cli.rb  infer.rb  train.rb
v7-bpe-tokens/: infer.rb
(+10 files in other folders)
