[package]
name = "tokeniza"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compile to a C-compatible dynamic library

[dependencies]
tokenizers = "0.21.1"  # Use the latest appropriate version from crates.io
serde = { version = "1.0", features = ["derive"] } # For serialization logic used internally and by us
libc = "0.2.172"
